--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,52 +9,28 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Opencart App Test Regression Suite</th></tr>
-<tr><td><a href="#t0">Register Page Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">77,236</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Login Page Test_firefox</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,354</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Accounts Page Test_chrome</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">81,901</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Accounts Page Test_firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">84,377</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Login Page Test_chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">84,470</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">12</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">407,338</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Accounts Page Test_chrome</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,125</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Login Page Test_chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,049</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Accounts Page Test_firefox</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,427</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Login Page Test_firefox</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,929</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">12</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">47,530</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Opencart App Test Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Register Page Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.qa.opencart.tests.RegisterPagetest</td><td><a href="#m0">Userregisterationtest</a></td><td rowspan="1">1749584818931</td><td rowspan="1">0</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Login Page Test_firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m1">doLoginTest</a></td><td rowspan="1">1749584843142</td><td rowspan="1">3072</td></tr><tr class="passedeven"><td><a href="#m2">forgotPasswordLinkExistTest</a></td><td rowspan="1">1749584838760</td><td rowspan="1">3983</td></tr><tr class="passedeven"><td><a href="#m3">loginPageTitleTest</a></td><td rowspan="1">1749584842775</td><td rowspan="1">182</td></tr><tr class="passedeven"><td><a href="#m4">loginPageURLTest</a></td><td rowspan="1">1749584843034</td><td rowspan="1">85</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Accounts Page Test_chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.opencart.tests.AccountsPageTest</td><td><a href="#m5">AccountsPageTitleTest</a></td><td rowspan="1">1749584826897</td><td rowspan="1">1398</td></tr><tr class="passedeven"><td><a href="#m6">AccountsPageUrlTest</a></td><td rowspan="1">1749584828680</td><td rowspan="1">874</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Accounts Page Test_firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.opencart.tests.AccountsPageTest</td><td><a href="#m7">AccountsPageTitleTest</a></td><td rowspan="1">1749584854955</td><td rowspan="1">48</td></tr><tr class="passedeven"><td><a href="#m8">AccountsPageUrlTest</a></td><td rowspan="1">1749584855031</td><td rowspan="1">52</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">Login Page Test_chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m9">doLoginTest</a></td><td rowspan="1">1749584833255</td><td rowspan="1">13956</td></tr><tr class="passedeven"><td><a href="#m10">forgotPasswordLinkExistTest</a></td><td rowspan="1">1749584830551</td><td rowspan="1">776</td></tr><tr class="passedeven"><td><a href="#m11">loginPageTitleTest</a></td><td rowspan="1">1749584831439</td><td rowspan="1">259</td></tr><tr class="passedeven"><td><a href="#m12">loginPageURLTest</a></td><td rowspan="1">1749584831740</td><td rowspan="1">1457</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Opencart App Test Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Accounts Page Test_chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.opencart.tests.AccountsPageTest</td><td><a href="#m0">AccountsPageTitleTest</a></td><td rowspan="1">1750975194226</td><td rowspan="1">47</td></tr><tr class="passedeven"><td><a href="#m1">AccountsPageUrlTest</a></td><td rowspan="1">1750975194273</td><td rowspan="1">47</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Login Page Test_chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m2">doLoginTest</a></td><td rowspan="1">1750975191756</td><td rowspan="1">3483</td></tr><tr class="passedeven"><td><a href="#m3">forgotPasswordLinkExistTest</a></td><td rowspan="1">1750975190700</td><td rowspan="1">711</td></tr><tr class="passedeven"><td><a href="#m4">loginPageTitleTest</a></td><td rowspan="1">1750975191634</td><td rowspan="1">44</td></tr><tr class="passedeven"><td><a href="#m5">loginPageURLTest</a></td><td rowspan="1">1750975191693</td><td rowspan="1">47</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Accounts Page Test_firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.opencart.tests.AccountsPageTest</td><td><a href="#m6">AccountsPageTitleTest</a></td><td rowspan="1">1750975195704</td><td rowspan="1">33</td></tr><tr class="passedeven"><td><a href="#m7">AccountsPageUrlTest</a></td><td rowspan="1">1750975195754</td><td rowspan="1">33</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">Login Page Test_firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.qa.opencart.tests.LoginPageTest</td><td><a href="#m8">doLoginTest</a></td><td rowspan="1">1750975194070</td><td rowspan="1">3224</td></tr><tr class="passedeven"><td><a href="#m9">forgotPasswordLinkExistTest</a></td><td rowspan="1">1750975192953</td><td rowspan="1">1018</td></tr><tr class="passedeven"><td><a href="#m10">loginPageTitleTest</a></td><td rowspan="1">1750975193975</td><td rowspan="1">47</td></tr><tr class="passedeven"><td><a href="#m11">loginPageURLTest</a></td><td rowspan="1">1750975194038</td><td rowspan="1">32</td></tr></tbody>
 </table>
-<h2>Register Page Test</h2><h3 id="m0">com.qa.opencart.tests.RegisterPagetest#Userregisterationtest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
-Data Provider public java.lang.Object[][] com.qa.opencart.tests.RegisterPagetest.getUserRegData() returned a null value
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeDataProvider(MethodInvocationHelper.java:159)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:803)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:728)
-	at org.testng.internal.invokers.ParameterHandler.handleParameters(ParameterHandler.java:72)
-	at org.testng.internal.invokers.ParameterHandler.createParameters(ParameterHandler.java:51)
-	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:924)
-	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:194)
-	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:148)
-	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-	at org.testng.TestRunner.privateRun(TestRunner.java:829)
-	at org.testng.TestRunner.run(TestRunner.java:602)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:475)
-	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:58)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Login Page Test_firefox</h2><h3 id="m1">com.qa.opencart.tests.LoginPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.qa.opencart.tests.LoginPageTest#forgotPasswordLinkExistTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.qa.opencart.tests.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.qa.opencart.tests.LoginPageTest#loginPageURLTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Accounts Page Test_chrome</h2><h3 id="m5">com.qa.opencart.tests.AccountsPageTest#AccountsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.qa.opencart.tests.AccountsPageTest#AccountsPageUrlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Accounts Page Test_firefox</h2><h3 id="m7">com.qa.opencart.tests.AccountsPageTest#AccountsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.qa.opencart.tests.AccountsPageTest#AccountsPageUrlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Login Page Test_chrome</h2><h3 id="m9">com.qa.opencart.tests.LoginPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.qa.opencart.tests.LoginPageTest#forgotPasswordLinkExistTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">com.qa.opencart.tests.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">com.qa.opencart.tests.LoginPageTest#loginPageURLTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Accounts Page Test_chrome</h2><h3 id="m0">com.qa.opencart.tests.AccountsPageTest#AccountsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.qa.opencart.tests.AccountsPageTest#AccountsPageUrlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Page Test_chrome</h2><h3 id="m2">com.qa.opencart.tests.LoginPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.qa.opencart.tests.LoginPageTest#forgotPasswordLinkExistTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.qa.opencart.tests.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.qa.opencart.tests.LoginPageTest#loginPageURLTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Accounts Page Test_firefox</h2><h3 id="m6">com.qa.opencart.tests.AccountsPageTest#AccountsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.qa.opencart.tests.AccountsPageTest#AccountsPageUrlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Page Test_firefox</h2><h3 id="m8">com.qa.opencart.tests.LoginPageTest#doLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.qa.opencart.tests.LoginPageTest#forgotPasswordLinkExistTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.qa.opencart.tests.LoginPageTest#loginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.qa.opencart.tests.LoginPageTest#loginPageURLTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
